# cube

./: CMakeLists.txt  analysis.ipynb  analysis_results_2.5MeV.csv  analyze.py  analyze_results.py  cube.cc  dose_summary.csv  efficiency_report_pdd.csv  efficiency_report_vdd.csv  generate.py  plot_plot_plot.ipynb  results.xlsx  run.mac  simulation_results.csv  ~$results.xlsx
include/: CubeActionInitialization.hh  CubeDetectorConstruction.hh  CubeDetectorMessenger.hh  CubeEventAction.hh  CubePrimaryGeneratorAction.hh  CubeRunAction.hh  CubeSteppingAction.hh
src/: CubeActionInitialization.cc  CubeDetectorConstruction.cc  CubeDetectorMessenger.cc  CubeEventAction.cc  CubePrimaryGeneratorAction.cc  CubeRunAction.cc  CubeSteppingAction.cc
